kubernetes/traefik/dashboard/deprecated/ingress.yaml
# WARNING: do not enable. See ./ingress-internal.yaml for exposing dashboard.
# Even though authenticated, it is not best practice to expose this publicly.
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.local.dmhosted.com`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik
      services: # Route incoming traffic to Traefik service `api@internal`
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-certificate-secret-local
